feat: create GET /users/self endpoint
